# cdt2d

./: CMakeLists.txt  LICENSE
analysis/: Makefile  observable_analysis.py  plot_data.py  stats.py
data_files/: N_fOverN_i_4096.txt  N_fOverN_i_test.txt  N_fOverN_i_test3.txt  avNOverN_i_PROBTEST.txt  avNOverN_i_test2.txt  avdeltaNOverN_4096.txt  avdeltaNOverN_PROBTEST.txt  avdeltaNOverN_test.txt  avdeltaNOverN_test2.txt  avdeltaNOverN_test3.txt
include/: '  Bootstrap.h  DataManager.h  ErrorEstimator.h  FourTwoMove.h  Makefile  Move.h  MoveManager.h  Observable.h  Scheduler.h  Simplex.h  Triangle.h  Triangulation.h  TwoFourMove.h  TwoTwoMove.h  Vertex.h  libraries.h  types.h
include/tbi/: FourTwoMove.h  Metropolis.h  MoveManager.h  Simulation.h  SpecDim.h  TwoFourMove.h  TwoTwoMove.h
plots/: kc.gnuplot
src/: CMakeLists.txt  FourTwoMove.cpp  MoveManager.cpp  Triangle.cpp  Triangulation.cpp  TwoFourMove.cpp  TwoTwoMove.cpp  Vertex.cpp
src/tbi/: Metropolis.cpp  Simulation.cpp  SpecDim.cpp
test/: CMakeLists.txt  LatticeDebug.cpp  MetropolisDebug.cpp  MetropolisDebug2.cpp  MovesDebug.cpp  MovesDebug2.cpp  SimulationDebug.cpp
test/tbi/: SpecDimDebug.cpp
