add_executable(LatticeDebug LatticeDebug.cpp)
target_link_libraries(LatticeDebug lbcdt)

add_executable(MovesDebug MovesDebug.cpp)
target_link_libraries(MovesDebug lbcdt)

#add_executable(MetropolisDebug MetropolisDebug.cpp)
#target_link_libraries(MetropolisDebug lbcdt)
#
#add_executable(SimulationDebug SimulationDebug.cpp)
#target_link_libraries(SimulationDebug lbcdt)
#
#add_executable(SpecDimDebug SpecDimDebug.cpp)
#target_link_libraries(SpecDimDebug lbcdt)
